--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,5 +1,9 @@
 #header{
-background: url("public/images/herobg.jpg") no-repeat center center/cover;
+    width: 100vw;
+    height: 100vh;
+    display: grid;
+    align-items: center;
+
 }
 
 #header::before{
@@ -9,5 +13,9 @@ background: url("public/images/herobg.jpg") no-repeat center center/cover;
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(60, 60, 60, 0.5);
+    background: rgba(36, 36, 36, 0.5);
+}
+#content{
+    max-width: 1300px;
+    margin: 0 auto;
 }
