--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -13,9 +13,10 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(36, 36, 36, 0.5);
+    background: rgba(12, 12, 12, 0.5);
 }
 #content{
+    z-index: 10;
     max-width: 1300px;
     margin: 0 auto;
 }
